--- a/Maintenance dashboard.Client/Views/AcceptancePaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/AcceptancePaddleControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.CreateAcceptancePaddle"
+﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.AcceptancePaddleControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -40,7 +40,7 @@
 
 
 
-        <Grid Margin="15,80,15, 15" >
+        <Grid Margin="15,80,15, 15">
             <TextBlock Text="PRZYJĘCIE PALETKI" HorizontalAlignment="Center" VerticalAlignment="Top"  
                            FontSize="18"  Foreground="Gray" Margin="18"/>
 
@@ -81,8 +81,6 @@
                 <WrapPanel Grid.Row="1" Grid.Column="0">
                     <materialDesign:PackIcon Kind="BarcodeScanner" VerticalAlignment="Center" Width="30" Height="30"/>
                     <TextBox  Width="220" materialDesign:HintAssist.Hint="Numer paletki" 
-                             Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
-                             materialDesign:HintAssist.HelperText="Pole musi być wypełnione"
                               Text="{Binding Number, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                               Margin="10"/>
 
