--- a/Maintenance dashboard.Client/Views/EditPaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/EditPaddleControl.xaml
@@ -42,12 +42,13 @@
 
 
             <DataGrid ItemsSource="{Binding Paddles}" SelectedItem="{Binding SelectedPaddle}" IsReadOnly="True"
-                          Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="10" Background="White" AutoGenerateColumns="False">
+                          Grid.Column="1" Grid.Row="1"  Margin="10,10,0,10" Background="White" AutoGenerateColumns="False" HorizontalAlignment="Left" Width="460">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
                     <DataGridTextColumn Header="Numer" Binding="{Binding Number}"/>
                     <DataGridTextColumn Header="Model" Binding="{Binding Model}"/>
                     <DataGridTextColumn Header="Data dodania" Binding="{Binding AddedDate}"/>
+                    <DataGridTextColumn Header="Data ostatniej prewencji" Binding="{Binding LastPrevention}"/>
                     <DataGridTextColumn Header="Uwagi" Binding="{Binding Comments}"/>
                 </DataGrid.Columns>
             </DataGrid>
@@ -68,18 +69,14 @@
                     <materialDesign:PackIcon Kind="BarcodeScanner" VerticalAlignment="Center" Width="30" Height="30"/>
                     <TextBox  materialDesign:HintAssist.Hint="Numer paletki" Width="250" IsEnabled="False"
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
-                              Text="{Binding SelectedPaddle.Number, 
-                              UpdateSourceTrigger=PropertyChanged, 
-                              ValidatesOnDataErrors=True}" />
+                              Text="{Binding SelectedPaddle.Number}" />
                 </WrapPanel>
 
                 <WrapPanel>
                     <materialDesign:PackIcon Kind="Tools" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <TextBox  Width="250" materialDesign:HintAssist.Hint="Data dodania" IsEnabled="False"
+                    <TextBox  Width="250" materialDesign:HintAssist.Hint="Model" IsEnabled="False"
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
-                             Text="{Binding SelectedPaddle.Model, 
-                             UpdateSourceTrigger=PropertyChanged, 
-                             ValidatesOnDataErrors=True}" Margin="10"/>
+                             Text="{Binding SelectedPaddle.Model}" Margin="10"/>
                 </WrapPanel>
 
                 <WrapPanel>
@@ -87,9 +84,15 @@
                     <TextBox  materialDesign:HintAssist.Hint="Data dodania" Width="250" 
                               materialDesign:HintAssist.HelperText=""  IsEnabled="False"
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
-                              Text="{Binding SelectedPaddle.AddedDate, 
-                              UpdateSourceTrigger=PropertyChanged, 
-                              ValidatesOnDataErrors=True}" />
+                              Text="{Binding SelectedPaddle.AddedDate}"/>
+                </WrapPanel>
+
+                <WrapPanel>
+                    <materialDesign:PackIcon Kind="CalendarSync" VerticalAlignment="Center" Width="30" Height="30"/>
+                    <TextBox  materialDesign:HintAssist.Hint="Data ostatniej prewencji" Width="250" 
+                              materialDesign:HintAssist.HelperText=""  IsEnabled="False"
+                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
+                              Text="{Binding SelectedPaddle.LastPrevention}"/>
                 </WrapPanel>
 
                 <WrapPanel>
