--- a/Maintenance dashboard.Client/MainWindow.xaml
+++ b/Maintenance dashboard.Client/MainWindow.xaml
@@ -41,7 +41,7 @@
                                            michalgornik93@outlook.com <LineBreak/>
                                            MaintenanceDashboard<LineBreak/>
                                            Vesion 1.0.0 <LineBreak/>
-                                           
+
                                 </TextBlock>
                             </StackPanel>
                         </materialDesign:PopupBox>
@@ -61,25 +61,14 @@
                         <TextBlock Text="Alarmy" FontSize="8" Foreground="#F44336"/>
                     </StackPanel>
 
-                    <StackPanel VerticalAlignment="Center" Margin="7">
-                        <materialDesign:PopupBox StaysOpen="True" HorizontalAlignment="Center">
-                            <materialDesign:PopupBox.ToggleContent>
-                                <materialDesign:PackIcon Kind="Settings" Foreground="Gray"/>
-                            </materialDesign:PopupBox.ToggleContent>
-                            <StackPanel Width="300" Margin="8">
-                                <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" 
-                                           HorizontalAlignment="Center" Margin="8" Foreground="Gray" Text="Ustawienia" FontSize="14"/>
-                            </StackPanel>
-                        </materialDesign:PopupBox>
-                        <TextBlock Text="Ustawienia" FontSize="8" Foreground="Gray"/>
-                    </StackPanel>
+
 
                     <StackPanel VerticalAlignment="Center" Margin="7">
                         <materialDesign:PopupBox StaysOpen="True" HorizontalAlignment="Center">
                             <materialDesign:PopupBox.ToggleContent >
-                                <materialDesign:PackIcon Kind="Login" Foreground="Gray" />
+                                <materialDesign:PackIcon Kind="SignIn" Foreground="Gray" />
                             </materialDesign:PopupBox.ToggleContent>
-                            
+
                             <StackPanel Width="300" Margin="8">
                                 <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" FontSize="14"
                                            HorizontalAlignment="Center" Margin="8" Foreground="Gray" Text="Logowanie"/>
@@ -94,13 +83,19 @@
                         <TextBlock Text="Logowanie" FontSize="8" Foreground="Gray"/>
                     </StackPanel>
 
-                    
+                    <StackPanel VerticalAlignment="Top" Margin="0,10,0,0">
+                        <Button x:Name="btnLogout" Click="btnLogout_Click" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent" Width="auto" Height="22">
+                            <materialDesign:PackIcon Kind="SignOut" Foreground="Gray" Width="15" Height="16"/>
+                        </Button>
+                        <TextBlock Text="Wylogowanie" FontSize="8" Foreground="Gray"/>
+                    </StackPanel>
+
                     <Button x:Name="btnCloseWindow" Width="30" Height="30" 
                             Background="{x:Null}" BorderBrush="{x:Null}" 
                             Padding="0" Foreground="Gray" Click="btnCloseWindow_Click" >
                         <materialDesign:PackIcon Kind="Power" Width="22" Height="22"/>
                     </Button>
-                    
+
                 </StackPanel>
             </Grid>
 
@@ -111,7 +106,7 @@
                   VerticalAlignment="Center">
 
                 <Image Source="Resources/Zenek.png"/>
-                
+
             </Grid>
         </Grid>
 
@@ -151,16 +146,16 @@
                                        VerticalAlignment="Center" Margin="20 0" />
                         </StackPanel>
                     </ListViewItem>
-                  
-                    
+
+
                     <ListViewItem x:Name="ListaPaletek"  Foreground="LightGray">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="ClipboardList" Width="30" 
                                                      Height="35" VerticalAlignment="Top" Margin="5"/>
                             <TextBlock Text="Baza paletek"  
                                        VerticalAlignment="Center" Margin="20 0" />
-                            
-                            
+
+
                         </StackPanel>
                     </ListViewItem>
 
@@ -181,12 +176,12 @@
                         </StackPanel>
                     </ListViewItem>
                 </ListView>
-                
-                
+
+
 
             </Grid>
 
         </StackPanel>
-     
+
     </Grid>
 </Window>
